--- a/Frontend/src/app/Components/chat/chat.component.html
+++ b/Frontend/src/app/Components/chat/chat.component.html
@@ -1,11 +1,18 @@
 <div *ngIf="Loading | async; else noLoad">
+    <div class="row pt-3 justify-content-center">
+        <div class="spinner-border text-primary" role="status" [hidden]="!Loading">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+</div>
+<ng-template #noLoad>
     <div class="card bg-transparent chat animated zoomIn">
         <div class="card-header border-shadow">
             <div class="row">
                 <div class="col">
                     <div class="row align-items-center">
                         <img [src]="Chat.UrlImage" class="rounded-circle ml-2" alt="Profile" height="30" width="30"
-                            id="imageChat" onerror="this.src = '../../assets/Images/errorImage.svg'" />
+                            id="imageChat" onerror="this.src = '../../../assets/Images/errorImage.svg'" />
                         <div class="col pl-1">
                             <p class="font-weight-bold mb-0 ml-1">{{Chat.DisplayName}}</p>
                             <div id="typing" class="text-info mb-0 ml-1"></div>
@@ -25,8 +32,9 @@
         <div class="card-body border-shadow overflow-auto" id="scroll">
             <div class="row animated fadeIn delay-500ms pt-1 align-items-center mx-0"
                 *ngFor="let item of Messages | async" [ngClass]="{'justify-content-end': !FilterBool(item)}">
-                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" style="height: 35px; width: 40px;"
-                    *ngIf="FilterBool(item)" alt="Imagen" onerror="this.src = '../../assets/Images/errorImage.svg'" />
+                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile"
+                    style="height: 35px; width: 40px;" *ngIf="FilterBool(item)" alt="Imagen"
+                    onerror="this.src = '../../assets/Images/errorImage.svg'" />
                 <div class="col border-shadow">
                     <div class="row" [ngClass]="{'justify-content-end': !FilterBool(item)}">
                         <p class="px-1 text-secondary font-weight-bold my-0" style="font-size: 8px;">
@@ -44,8 +52,9 @@
                             {{item.CreateAt |  date:'h:mm a'}}</p>
                     </div>
                 </div>
-                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" style="height: 35px; width: 40px;"
-                    *ngIf="!FilterBool(item)" alt="Imagen" onerror="this.src = '../../assets/Images/errorImage.svg'" />
+                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile"
+                    style="height: 35px; width: 40px;" *ngIf="!FilterBool(item)" alt="Imagen"
+                    onerror="this.src = '../../assets/Images/errorImage.svg'" />
             </div>
         </div>
         <div class="card-footer">
@@ -62,13 +71,6 @@
                     </button>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<ng-template #noLoad>
-    <div class="row pt-3 justify-content-center">
-        <div class="spinner-border text-primary" role="status" [hidden]="!Loading">
-            <span class="sr-only">Loading...</span>
         </div>
     </div>
 </ng-template>
