--- a/Frontend/src/app/Components/home/home.component.sass
+++ b/Frontend/src/app/Components/home/home.component.sass
@@ -7,3 +7,11 @@
 
 #collapse:focus, #collapse:active:focus, #collapse.active:focus
   box-shadow: none !important
+
+.trans
+  transform: translate(-100%)
+  transition-duration: 0.5s
+
+.transnorm
+  transition-delay: 0.5s
+  transition-duration: 0.5s
