--- a/Frontend/src/app/Components/home/home.component.html
+++ b/Frontend/src/app/Components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="row mx-0" style="height: 100%">
-    <nav class="col-md-3 col-xl-2 d-block bg-transparent border-right" @sideContentAnimation id="nav" *ngIf="this.ShowMenu | async">
+    <nav class="col-md-3 col-xl-2 d-block bg-transparent border-right" @sideContentAnimation id="nav"
+        *ngIf="this.ShowMenu | async">
         <div class="row pt-3 justify.content-center mx-0 text-dark border-bottom side-list-content-data-inner">
             <div class="col align-self-center">
                 <img [src]="this.User.UrlImage" class="rounded-circle float-left pb-1"
