--- a/Frontend/src/app/Components/profile/profile.component.html
+++ b/Frontend/src/app/Components/profile/profile.component.html
@@ -3,7 +3,13 @@
         <div class="row justify-content-center">
             <div class="col-11 col-md-9 col-xl-7 align-self-center pt-2">
                 <div class="card text-center shadow">
-                    <div class="card-header gradient" style="height: 140px;"></div>
+                    <div class="card-header gradient" style="height: 140px;">
+                        <div class="row justify-content-end">
+                            <button class="btn text-white">
+                                <fa-icon [icon]="Icons[5]" size="lg"></fa-icon>
+                            </button>
+                        </div>
+                    </div>
                     <div class="card-body">
                         <div class="row w-100 justify-content-center mr-0 ml-0">
                             <div class="card-block card-img-profile">
