--- a/Frontend/src/app/Components/listusers/listusers.component.html
+++ b/Frontend/src/app/Components/listusers/listusers.component.html
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col">
                 <div class="input-group w-100">
-                    <input class="form-control py-2 border-right-0 border bg-transparent" id="search" type="search"
+                    <input class="form-control py-2 border-right-0 border bg-transparent" type="search"
                         placeholder="Buscar por nombre" (input)="ChangeInput($event)" />
                     <span class="input-group-append">
-                        <button class="btn btn-link border-left-0 border">
+                        <button class="btn btn-link border-left-0 border" aria-label="change">
                             <fa-icon [icon]="Icons[0]"></fa-icon>
                         </button>
                     </span>
