--- a/Frontend/src/app/Components/config-project/config-project.component.html
+++ b/Frontend/src/app/Components/config-project/config-project.component.html
@@ -23,8 +23,7 @@
                                 <div class="row">
                                     <div class="input-group w-100">
                                         <input class="form-control py-2 border-right-0 border bg-transparent"
-                                            id="search" type="search" placeholder="Buscar por nombre"
-                                            (input)="ChangeInput($event)" />
+                                            id="search" type="search" placeholder="Buscar por nombre" />
                                         <span class="input-group-append">
                                             <button class="btn btn-link border-left-0 border">
                                                 <fa-icon [icon]="Icons[0]"></fa-icon>
