--- a/Frontend/src/app/Components/task/task.component.html
+++ b/Frontend/src/app/Components/task/task.component.html
@@ -5,10 +5,10 @@
                 <fa-icon [icon]="Icons[0]">
                 </fa-icon>
             </div>
-            <button class="btn text-white float-right" id="btn">
+            <button class="btn text-white float-right" id="btn" aria-label="view">
                 <fa-icon [icon]="Icons[1]"></fa-icon>
             </button>
-            <button class="btn text-danger float-right" id="btn" (click)="deleteTask()">
+            <button class="btn text-danger float-right" id="btn" (click)="deleteTask()" aria-label="delete">
                 <fa-icon [icon]="Icons[2]"></fa-icon>
             </button>
         </div>
