--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,10 +3,13 @@
     <div class="row">
         <div class="col">
             <nav class="navbar navbar-toggleable-md sticky-top text-uppercase gradient">
-                <a class="navbar-brand text-white mr-0" [routerLink]="['/home']" routerLinkActive="active">
+                <a class="navbar-brand text-white mr-0" [routerLink]="['/teslac']" routerLinkActive="active">
                     <img src="../assets/Images/Teslac.png" width="30" height="30"
                         class="d-inline-block align-top mr-1" alt="">
                     Teslac
+                </a>
+                <a href="/dspace" class="text-white" aria-label="home">
+                    <fa-icon [icon]="Book" size="lg"></fa-icon>
                 </a>
             </nav>
         </div>
