--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -4,6 +4,11 @@ body, html
     height: 100%
     overflow-x: hidden
 
+@font-face
+    font-family: 'Ubuntu'
+    font-display: swap
+    src: url("/assets/Fonts/Ubuntu-Regular.ttf") format("truetype")
+
 *
     font-family: 'Ubuntu', sans-serif
 
