--- a/Frontend/src/app/Components/login/login.component.html
+++ b/Frontend/src/app/Components/login/login.component.html
@@ -36,7 +36,8 @@
                         <button type="button" class="btn btn-link">¿Has Perdido La Contraseña?</button>
                     </div>
                     <div class="form-group pt-3 mb-0">
-                        <button type="submit" class="btn btn-primary w-50 gradient" [disabled]="Loading | async">
+                        <button type="submit" class="btn btn-primary w-50 gradient" [disabled]="Loading | async"
+                            aria-label="login">
                             <div class="spinner-border text-light" role="status"
                                 *ngIf="Loading | async; else elseTemplate">
                                 <span class="sr-only">Loading...</span>
@@ -47,7 +48,7 @@
                         </button>
                     </div>
                     <div class="form-group pt-1 mb-0">
-                        <a routerLink="/signup" routerLinkActive="active">¿No Tienes Cuenta?</a>
+                        <a routerLink="/teslac/signup" routerLinkActive="active">¿No Tienes Cuenta?</a>
                     </div>
                 </form>
             </div>
