[Fernando Araujo][11-28-2019] nuevo

--- a/Frontend/src/app/Components/home/home.component.html
+++ b/Frontend/src/app/Components/home/home.component.html
@@ -8,7 +8,7 @@
                     alt="Imagen">
             </div>
             <div class="col align-self-center pb-1">
-                <a [routerLink]="[ '/teslac/profile' ]" routerLinkActive="active" class="rounded-circle float-right">
+                <a [routerLink]="[ '/profile' ]" routerLinkActive="active" class="rounded-circle float-right">
                     <fa-icon [icon]="Icons[6]" size="lg"></fa-icon>
                 </a>
             </div>
