--- a/Frontend/src/app/Components/sign-up/sign-up.component.html
+++ b/Frontend/src/app/Components/sign-up/sign-up.component.html
@@ -97,7 +97,7 @@
                         </button>
                     </div>
                     <div class="form-group pt-1 mb-0">
-                        <a routerLink="/teslac/login" routerLinkActive="active">¿Tienes Cuenta?</a>
+                        <a routerLink="/login" routerLinkActive="active">¿Tienes Cuenta?</a>
                     </div>
                 </form>
             </div>
