--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col">
             <nav class="navbar navbar-toggleable-md sticky-top text-uppercase gradient">
-                <a class="navbar-brand text-white mr-0" [routerLink]="['/teslac']" routerLinkActive="active">
+                <a class="navbar-brand text-white mr-0" [routerLink]="['/home']" routerLinkActive="active">
                     <img src="../assets/Images/Teslac.png" width="30" height="30"
                         class="d-inline-block align-top mr-1" alt="">
                     Teslac
