--- a/Frontend/src/app/Components/login/login.component.html
+++ b/Frontend/src/app/Components/login/login.component.html
@@ -48,7 +48,7 @@
                         </button>
                     </div>
                     <div class="form-group pt-1 mb-0">
-                        <a routerLink="/teslac/signup" routerLinkActive="active">¿No Tienes Cuenta?</a>
+                        <a routerLink="/signup" routerLinkActive="active">¿No Tienes Cuenta?</a>
                     </div>
                 </form>
             </div>
