--- a/Frontend/src/app/Components/profile/profile.component.html
+++ b/Frontend/src/app/Components/profile/profile.component.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-11 col-sm-9 col-md-3" *ngFor="let project of Projects | async">
                         <a class="card border-light shadow-sm animated zoomIn"
-                            [routerLink]="[ '/teslac/project', project._id ]" routerLinkActive="active">
+                            [routerLink]="[ '/project', project._id ]" routerLinkActive="active">
                             <div class="card-header gradient"></div>
                             <div class="card-body">
                                 <div class="row w-100 mx-0">
